Completed Lesson 2, first assignment. Post scaffold complete.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,14 @@
 
 en:
   hello: "Hello world"
+
+  activerecord:
+    attributes:
+      post:
+        url: "URL"
+    errors:
+      models:
+        post:
+          attributes:
+            url:
+              invalid: "invalid format. Make sure it starts with http:// or https://"
