--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,8 @@ en:
     attributes:
       post:
         url: "URL"
+      comment:
+        body: "Comment"
     errors:
       models:
         post:
